kubernetes/image-registry/ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  namespace: image-registry
  labels:
    app: docker-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - name: web-ui
          image: joxit/docker-registry-ui:2.6.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
