kubernetes/image-registry/ui/svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  namespace: image-registry
  labels:
    app: docker-registry-ui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: docker-registry-ui
