kubernetes/image-registry/ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ui-ingress
  namespace: image-registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - registry-ui.anil-sezer.com
      secretName: docker-registry-ui-tls
  rules:
    - host: registry-ui.anil-sezer.com
      http:
        paths:
          - backend:
              service:
                name: docker-registry-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
